# cw4_view_vacancies_project

./: main.py  pyproject.toml  readme.md
data/: vacancies.json
src/: sorting_funcs.py  vacancies_file.py  vacancies_service.py  vacancy.py
tests/: test_vacancy.py
