[tool.poetry]
name = "cw4_view_vacancies_project"
version = "0.1.0"
description = ""
authors = ["putilovskaya <putilovskayaa@mail.ru>"]

[tool.poetry.dependencies]
python = "^3.11"
requests = "^2.31.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
